main init + float + names

--- a/index.html
+++ b/index.html
@@ -12,15 +12,88 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <Header id="header">
-        <h1>
-            Meet Our Team
-        </h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugiat consequuntur accusantium quidem nostrum atque praesentium itaque autem. Aspernatur expedita eos tempora ipsam cumque pariatur iure id asperiores, adipisci et?            
-        </p>
-    </Header>
+    <div class="container">
+
+        <!-- header -->
+        <Header id="header">
+            <h1>
+                Meet Our Team
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugiat consequuntur accusantium quidem nostrum atque praesentium itaque autem. Aspernatur expedita eos tempora ipsam cumque pariatur iure id asperiores, adipisci et?            
+            </p>
+        </Header>
+        <!-- /header -->
+        
+        <main class="clear-fix">
+
+            <div class="col float-left">
+                <img src="" alt="Marco Bianchi">
+                <strong>
+                    MARCO BIANCHI
+                </strong>
+                <span>
+                    Designer
+                </span>
+                <a href="" class="email">marcobianchi@team.com</a>
+            </div>
+
+            <div class="col float-left">
+                <img src="" alt="Laura Rossi">
+                <strong>
+                    LAURA ROSSI
+                </strong>
+                <span>
+                    Front-end Developer
+                </span>
+                <a href="" class="email">laurarossi@team.com</a>
+            </div>
+
+            <div class="col float-left">
+                <img src="" alt="Giorgio Verdi">
+                <strong>
+                    GIORGIO VERDI
+                </strong>
+                <span>
+                    Back-end Developer
+                </span>
+                <a href="" class="email">giorgioverdi@team.com</a>
+            </div>
+
+            <div class="col float-left">
+                <img src="" alt="Marta Ipsum">
+                <strong>
+                    MARTA IPSUM
+                </strong>
+                <span>
+                    SEO Specialist
+                </span>
+                <a href="" class="email">martaipsum@team.com</a>
+            </div>
+
+            <div class="col float-left">
+                <img src="" alt="Roberto Lorem">
+                <strong>
+                    ROBERTO LOREM
+                </strong>
+                <span>
+                    Project Manager
+                </span>
+                <a href="" class="email">robertolorem@team.com</a>
+            </div>
+
+            <div class="col float-left">
+                <img src="" alt="Daniela Amet">
+                <strong>
+                    DANIELA AMET
+                </strong>
+                <span>
+                    Analyst
+                </span>
+                <a href="" class="email">danielaamet@team.com</a>
+            </div>
+        </main>
+    </div>
 
 
 
