main almost done

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         </Header>
         <!-- /header -->
         
+        <!-- main -->
         <main class="clear-fix">
 
+            <!-- MARCO BIANCHI -->
             <div class="col float-left">
-                <img src="" alt="Marco Bianchi">
+                <img src="img/male1.png" alt="Marco Bianchi">
                 <strong>
                     MARCO BIANCHI
                 </strong>
@@ -37,9 +39,11 @@
                 </span>
                 <a href="" class="email">marcobianchi@team.com</a>
             </div>
+            <!-- /MARCO BIANCHI -->
 
+            <!-- LAURA ROSSI -->
             <div class="col float-left">
-                <img src="" alt="Laura Rossi">
+                <img src="img/female1.png" alt="Laura Rossi">
                 <strong>
                     LAURA ROSSI
                 </strong>
@@ -48,9 +52,11 @@
                 </span>
                 <a href="" class="email">laurarossi@team.com</a>
             </div>
+            <!-- /LAURA ROSSI -->
 
+            <!-- GIORGIO VERDI -->
             <div class="col float-left">
-                <img src="" alt="Giorgio Verdi">
+                <img src="img/male2.png" alt="Giorgio Verdi">
                 <strong>
                     GIORGIO VERDI
                 </strong>
@@ -59,9 +65,11 @@
                 </span>
                 <a href="" class="email">giorgioverdi@team.com</a>
             </div>
+            <!-- /GIORGIO VERDI -->
 
+            <!-- MARTA IPSUM -->
             <div class="col float-left">
-                <img src="" alt="Marta Ipsum">
+                <img src="img/female2.png" alt="Marta Ipsum">
                 <strong>
                     MARTA IPSUM
                 </strong>
@@ -70,9 +78,11 @@
                 </span>
                 <a href="" class="email">martaipsum@team.com</a>
             </div>
+            <!-- / MARTA IPSUM -->
 
+            <!-- ROBERTO LOREM -->
             <div class="col float-left">
-                <img src="" alt="Roberto Lorem">
+                <img src="img/male3.png" alt="Roberto Lorem">
                 <strong>
                     ROBERTO LOREM
                 </strong>
@@ -81,18 +91,24 @@
                 </span>
                 <a href="" class="email">robertolorem@team.com</a>
             </div>
+            <!-- /ROBERTO LOREM -->
 
+            <!-- DANIELA AMET -->
             <div class="col float-left">
-                <img src="" alt="Daniela Amet">
+                <img src="img/female3.png" alt="Daniela Amet">
                 <strong>
                     DANIELA AMET
                 </strong>
-                <span>
+                <p>
                     Analyst
-                </span>
+                </p>
                 <a href="" class="email">danielaamet@team.com</a>
             </div>
+            <!-- /DANIELA AMET -->
+
         </main>
+        <!-- /main -->
+
     </div>
 
 
