added margin & fix

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         
         <!-- main -->
         <main class="clear-fix">
-
             <!-- MARCO BIANCHI -->
             <div class="col float-left">
-                <img src="img/male1.png" alt="Marco Bianchi">
+                <img class="profile-img" src="img/male1.png" alt="Marco Bianchi">
                 <strong>
                     MARCO BIANCHI
                 </strong>
@@ -43,7 +42,7 @@
 
             <!-- LAURA ROSSI -->
             <div class="col float-left">
-                <img src="img/female1.png" alt="Laura Rossi">
+                <img class="profile-img" src="img/female1.png" alt="Laura Rossi">
                 <strong>
                     LAURA ROSSI
                 </strong>
@@ -56,7 +55,7 @@
 
             <!-- GIORGIO VERDI -->
             <div class="col float-left">
-                <img src="img/male2.png" alt="Giorgio Verdi">
+                <img class="profile-img" src="img/male2.png" alt="Giorgio Verdi">
                 <strong>
                     GIORGIO VERDI
                 </strong>
@@ -69,7 +68,7 @@
 
             <!-- MARTA IPSUM -->
             <div class="col float-left">
-                <img src="img/female2.png" alt="Marta Ipsum">
+                <img class="profile-img" src="img/female2.png" alt="Marta Ipsum">
                 <strong>
                     MARTA IPSUM
                 </strong>
@@ -82,7 +81,7 @@
 
             <!-- ROBERTO LOREM -->
             <div class="col float-left">
-                <img src="img/male3.png" alt="Roberto Lorem">
+                <img class="profile-img" src="img/male3.png" alt="Roberto Lorem">
                 <strong>
                     ROBERTO LOREM
                 </strong>
@@ -95,17 +94,16 @@
 
             <!-- DANIELA AMET -->
             <div class="col float-left">
-                <img src="img/female3.png" alt="Daniela Amet">
+                <img class="profile-img" src="img/female3.png" alt="Daniela Amet">
                 <strong>
                     DANIELA AMET
                 </strong>
-                <p>
+                <span>
                     Analyst
-                </p>
+                </span>
                 <a href="" class="email">danielaamet@team.com</a>
             </div>
             <!-- /DANIELA AMET -->
-
         </main>
         <!-- /main -->
 
