--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span>
                     Designer
                 </span>
-                <a href="" class="email">marcobianchi@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">marcobianchi@team.com</a>
             </div>
             <!-- /MARCO BIANCHI -->
 
@@ -49,7 +49,7 @@
                 <span>
                     Front-end Developer
                 </span>
-                <a href="" class="email">laurarossi@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">laurarossi@team.com</a>
             </div>
             <!-- /LAURA ROSSI -->
 
@@ -62,7 +62,7 @@
                 <span>
                     Back-end Developer
                 </span>
-                <a href="" class="email">giorgioverdi@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">giorgioverdi@team.com</a>
             </div>
             <!-- /GIORGIO VERDI -->
 
@@ -75,7 +75,7 @@
                 <span>
                     SEO Specialist
                 </span>
-                <a href="" class="email">martaipsum@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">martaipsum@team.com</a>
             </div>
             <!-- / MARTA IPSUM -->
 
@@ -88,7 +88,7 @@
                 <span>
                     Project Manager
                 </span>
-                <a href="" class="email">robertolorem@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">robertolorem@team.com</a>
             </div>
             <!-- /ROBERTO LOREM -->
 
@@ -101,7 +101,7 @@
                 <span>
                     Analyst
                 </span>
-                <a href="" class="email">danielaamet@team.com</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" class="email">danielaamet@team.com</a>
             </div>
             <!-- /DANIELA AMET -->
         </main>
